--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "./.eslintrc.json"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "./.eslintrc.json", "./vite.config.ts"],
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
