Fix: set  for .js to always in server

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -20,7 +20,8 @@
       {
         "endOfLine": "auto"
       }
-    ]
+    ],
+    "import/extensions": [0, { "<js>": "always" }]
   },
   "parserOptions": {
     "sourceType": "module"
