--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -28,5 +31,9 @@
     "eslint-plugin-react": "^7.32.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3"
+  },
+  "engines": {
+    "node": ">=16",
+    "npm": ">=8"
   }
 }
