--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "readline": "^1.3.0",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
