login,signup,notesupload ui added

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -33,6 +33,7 @@
         "endOfLine": "auto"
       }
     ],
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "react/require-default-props": "off"
   }
 }
