--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "html-to-text": "^9.0.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
+    "pug": "^3.0.2",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
