Add notes resource to api, add new eslint rule, add a npm script

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -24,6 +24,7 @@
     "import/extensions": [0, { "<js>": "always" }]
   },
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaVersion": "latest"
   }
 }
