Add env variables to copy.env file

--- a/server/copy.env
+++ b/server/copy.env
@@ -1,1 +1,20 @@
+# -----------------------------------------------------
+# DATABASE VARIABLES
 MONGO_URL=
+
+# -----------------------------------------------------
+# EMAIL VARIABLES
+
+EMAIL_FROM_NAME=College Collab
+EMAIL_FROM_EMAIL=
+
+# SENDGRID
+SENDGRID_API_KEY=
+SENDGRID_API_SERVER=
+SENDGRID_PORT=25
+
+# MAILTRAP
+MAILTRAP_EMAIL_HOST=
+MAILTRAP_EMAIL_PORT=2525
+MAILTRAP_EMAIL_USERNAME=
+MAILTRAP_EMAIL_PASSWORD=
