Implement CORS in the project

--- a/server/copy.env
+++ b/server/copy.env
@@ -1,20 +1,27 @@
 # -----------------------------------------------------
+# ENVIRONMENT VARIABLES
+
+NODE_ENV=development
+CLIENT_BASE_URL=http://localhost:3000
+
+# -----------------------------------------------------
 # DATABASE VARIABLES
-MONGO_URL=
+
+MONGO_URL=mongodb://localhost:27017/college-collab
 
 # -----------------------------------------------------
 # EMAIL VARIABLES
 
 EMAIL_FROM_NAME=College Collab
-EMAIL_FROM_EMAIL=
+EMAIL_FROM_EMAIL=arunbohra12@gmail.com
 
 # SENDGRID
 SENDGRID_API_KEY=
-SENDGRID_API_SERVER=
+SENDGRID_API_SERVER=smtp.sendgrid.net
 SENDGRID_PORT=25
 
 # MAILTRAP
-MAILTRAP_EMAIL_HOST=
+MAILTRAP_EMAIL_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_EMAIL_PORT=2525
 MAILTRAP_EMAIL_USERNAME=
 MAILTRAP_EMAIL_PASSWORD=
