Add signup api calls on the client & remove  field from db

--- a/server/copy.env
+++ b/server/copy.env
@@ -25,3 +25,9 @@ MAILTRAP_EMAIL_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_EMAIL_PORT=2525
 MAILTRAP_EMAIL_USERNAME=
 MAILTRAP_EMAIL_PASSWORD=
+
+# -----------------------------------------------------
+# JWT VARIABLES
+
+JWT_SECRET=
+JWT_EXPIRES_IN=90d
