--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ node_modules
 client/dist
 client/dist-ssr
 client/*.local
+client/.env
 
 # ###################################
 # FILES TO IGNORE ON THE SERVER
