--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.6.2"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
