🩹 Fix wrong imports and fix url for mongo server

--- a/server/copy.env
+++ b/server/copy.env
@@ -7,7 +7,7 @@ CLIENT_BASE_URL=http://localhost:3000
 # -----------------------------------------------------
 # DATABASE VARIABLES
 
-MONGO_URL=mongodb://localhost:27017/college-collab
+MONGO_URL=mongodb://127.0.0.1:27017/college-collab?directConnection=true
 
 # -----------------------------------------------------
 # EMAIL VARIABLES
